--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,10 +45,20 @@ jobs:
       - name: Install frontend dependencies
         run: yarn install
 
+      - name: Check signing configuration
+        shell: bash
+        run: |
+          if [ -n "${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}" ]; then
+            echo "✓ TAURI_SIGNING_PRIVATE_KEY is set"
+          else
+            echo "✗ TAURI_SIGNING_PRIVATE_KEY is NOT set"
+          fi
+
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
         with:
           tagName: v__VERSION__
           releaseName: 'Dota Keeper v__VERSION__'
@@ -56,6 +66,12 @@ jobs:
           releaseDraft: true
           prerelease: false
           args: ${{ matrix.args }}
+
+      - name: Verify signature files were created
+        shell: bash
+        run: |
+          echo "Checking for .sig files in target directory..."
+          find src-tauri/target -name "*.sig" -type f || echo "No .sig files found"
 
   update-release-json:
     needs: release
